--- a/history.txt
+++ b/history.txt
@@ -46,3 +46,9 @@ mgamodo
 # 2012-09-20    Haarautettu modo-skriptistä, jonka viimeisin päivitys
 #               7.10.2011.
 # 2016-08-11    Päivityksiä.
+
+podo
+
+# 2016-04-23    Luotu modo-skriptille joskus tarvittava vastinpari. (TN)
+# 2016-09-16    Pieniä tyylikorjauksia. (TN)
+# 2016-09-17    Komentoriviparametrien idea uusiksi. (TN)
