--- a/history.txt
+++ b/history.txt
@@ -24,6 +24,8 @@ modo
 # 2016-08-08    ${0##*/} on zsh:ssa helpommin ${0:t}. (TN)
 # 2016-08-19    Myös ${var:r} käyttöön. (TN)
 # 2016-09-03    ${var:t} ja ${var:r} vielä pariin paikkaan. (TN)
+# 2016-09-18    Pieniä tyylikorjauksia. (TN)
+# 2016-10-03    Edelleen tyylikorjauksia. (TN)
 
 l10nrestore.py (previously morestore.py)
 
@@ -33,13 +35,16 @@ l10nrestore.py (previously morestore.py)
 # 2016-09-13  0.9.91  Added support for .qm files and renamed the program
 #                     to l10nrestore. (TN)
 
-tsdo
+qmdo (aik. tsdo)
 
 # 2009-07-12    Projekti käynnistetty. (TN)
 # 2016-01-24    Siirros zsh:hon. (TN)
 # 2016-05-03    Lisätty -- kaikkiin print-komentoihin. (TN)
 # 2016-09-13    Tehtiin pitkään odottaneita lisämuutoksia modon mallin
 #               mukaisesti. (TN)
+# 2016-09-24    Vaihdettiin nimeksi qmdo (koska myös modo sisältää kohteen, ei
+#               lähteen tiedostopäätteen!). (TN)
+# 2016-10-03    modon tyyliset muutokset. (TN)
 
 mgamodo
 
